@@ -315,6 +315,8 @@ NCHOptions.prototype = {
         "nch-view-show_window_column_information",
         "nch-view-show_window_column_alias",
         "nch-view-show_window_column_flags",
+        "nch-view-show_window_column_attempt",
+        "nch-view-show_window_column_status",
         "nch-general-one_window_only",
         "nch-general-filter_out_acknowledged",
         "nch-general-filter_out_disabled_notifications",
@@ -462,6 +464,8 @@ NCHOptions.prototype = {
         "nch-view-show_window_column_information",
         "nch-view-show_window_column_alias",
         "nch-view-show_window_column_flags",
+        "nch-view-show_window_column_attempt",
+        "nch-view-show_window_column_status",
         "nch-general-one_window_only",
         "nch-general-filter_out_acknowledged",
         "nch-general-filter_out_disabled_notifications",
