@@ -1,4 +1,5 @@
 0.10.9 (testing)
+* NEW: Option to specify the lowest level to play sound with (only for service alerts).
 * NEW: extremely short statusbar info (no No problem, colored background behind N-icon)
 * INTERNAL: New version of popup - tooltip and popup mashup
 * INTERNAL: Popup scrollbars are used instead of arrows, but scrollbars have to be still visible
